feat: add crud endpoints